<resources>
    <string name="app_name">Flovatar</string>
    <string name="login_with">Login with</string>
    <string name="browse_flowatars">Browse flowatars</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="my_flowatars">My flovatars</string>
    <string name="public_flowatars">Public Flovatars</string>
    <string name="mini_games">Mini games</string>
    <string name="play_mini_games">Play mini games</string>
    <string name="show_leaderboard">Show leaderboard</string>
    <string name="total_score">Total score</string>
    <string name="total_score_">Total score:</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="what_want_play">What do you want to play?</string>
    <string name="where_waldo">Where’s Floldo</string>
    <string name="whack_avatar">Whack-a-Flovatar</string>
    <string name="flowatar_runner">Flowatar runner</string>
    <string name="to_play_login">To play login with</string>
    <string name="coming_soon">Coming soon</string>
    <string name="leaderbord">Leaderboard</string>
    <string name="chose_a_game">Chose a game</string>
    <string name="games">Games</string>
    <string name="back">Back</string>
    <string name="chose_your_player">Chose your player</string>
    <string name="play">Play</string>
    <string name="score">Score:</string>
    <string name="score_">Score</string>
    <string name="get_ready">Get ready</string>
    <string name="time_is_up">Game over</string>
    <string name="your_score">Your score</string>
    <string name="play_again">Play again</string>
    <string name="paused">Paused</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="you_did_it">You did it!</string>
    <string name="save_score">Save score</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="error_enter_name">You need to enter name before submitting</string>
    <string name="next_level">Next level</string>
</resources>