<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FFEE50"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="center"
                android:text="@string/are_you_sure_logout"
                android:textColor="#180E38"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnLogout"
                    android:layout_width="140dp"
                    android:layout_height="58dp"
                    android:background="@drawable/btn_double_blue"
                    android:fontFamily="@font/staatliches_regular"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnNo"
                    android:layout_width="110dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/btn_double_yellow_small"
                    android:fontFamily="@font/staatliches_regular"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="#180E38"
                    android:textSize="36sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
