<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_gradient"
    tools:context=".mobileapp.activity.PlayGamesActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/flovatar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/flovatar_logo" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_play_games"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_below="@id/flovatar_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_double_yellow"
        android:fontFamily="@font/staatliches_regular"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/play_mini_games"
        android:textAllCaps="true"
        android:textColor="#180E38"
        android:textSize="32sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ic_stars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_play_games"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/total_score"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/layot_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnShowLeaderbord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_purple_bottom_rounded"
        android:fontFamily="@font/staatliches_regular"
        android:gravity="center"
        android:text="@string/show_leaderboard"
        android:textColor="#FFEE50"
        android:textSize="26sp" />


</RelativeLayout>