<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#431C8F"
    tools:context=".mobileapp.activity.UnAuthorizedMiniGamesActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/ic_icon_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/staatliches_regular"
            android:text="@string/mini_games"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/what_want_play"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_play_waldo"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="#FFEE50"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFEE50"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/game_avatar_1" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/where_waldo"
                            android:textColor="#180E38"
                            android:textSize="30sp"
                            app:autoSizeMaxTextSize="30sp"
                            app:autoSizeTextType="uniform" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginBottom="4dp"
                        app:srcCompat="@drawable/ic_frame" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>
        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_play_whack"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFEE50"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/game_avatar_1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/whack_avatar"
                    android:textColor="#180E38"
                    android:textSize="30sp"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_play_runner"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFEE50"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/game_avatar_2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/flowatar_runner"
                    android:textColor="#180E38"
                    android:textSize="30sp"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:text="@string/to_play_login"
            android:textColor="#180E38"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:src="@drawable/blocto_logo" />

    </LinearLayout>

</RelativeLayout>